<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Mathdroid</string>

  <string name="default_angle_mode">Radians</string>
  <string-array name="angle_modes">
    <item>Degrees</item>
    <item>Radians</item>
  </string-array>

  <string name="default_output_base">10</string>
  <string-array name="output_bases">
    <item>2</item>
    <item>8</item>
    <item>10</item>
    <item>16</item>
  </string-array>

  <string name="del_button_description">Delete</string> <!-- same as IME -->
  <string name="kbd_button_description">Show full keyboard</string>
  <string name="open_button_description">Open parenthesis</string>
  <string name="close_button_description">Close parenthesis</string>
  <string name="left_button_description">Cursor left</string>
  <string name="right_button_description">Cursor right</string>
  <string name="comma_button_description">Comma</string>
  <string name="ceil_button_description">Ceiling function</string>
  <string name="floor_button_description">Floor function</string>
  <string name="pi_button_description">Pi</string>
  <string name="pling_button_description">Exclamation mark</string>
  <string name="ncr_button_description">NCR function</string>
  <string name="npr_button_description">NPR function</string>
  <string name="times_button_description">Times</string>
  <string name="divide_button_description">Divide</string>
  <string name="sin_button_description">Sine function</string>
  <string name="cos_button_description">Co sine function</string>
  <string name="tan_button_description">Tangent function</string>
  <string name="ln_button_description">Natural logarithm function</string>
  <string name="e_button_description">e</string>
  <string name="rand_button_description">Rand function</string>
  <string name="plus_button_description">Plus</string>
  <string name="minus_button_description">Minus</string>
  <string name="asin_button_description">Arc sine function</string>
  <string name="acos_button_description">Arc co sine function</string>
  <string name="atan_button_description">Arc tangent function</string>
  <string name="log10_button_description">Base 10 logarithm function</string>
  <string name="sqrt_button_description">Square root</string>
  <string name="pow_button_description">Power operator</string>
  <string name="dot_button_description">Decimal point</string>
  <string name="exe_button_description">Enter</string>

  <string name="acos_button">acos</string>
  <string name="ans_button">Ans</string>
  <string name="asin_button">asin</string>
  <string name="atan_button">atan</string>
  <string name="ceil_button">ceil</string>
  <string name="close_button">)</string>
  <string name="comma_button">,</string>
  <string name="cos_button">cos</string>
  <string name="digit_0_button">0</string>
  <string name="digit_1_button">1</string>
  <string name="digit_2_button">2</string>
  <string name="digit_3_button">3</string>
  <string name="digit_4_button">4</string>
  <string name="digit_5_button">5</string>
  <string name="digit_6_button">6</string>
  <string name="digit_7_button">7</string>
  <string name="digit_8_button">8</string>
  <string name="digit_9_button">9</string>
  <string name="divide_button">\u00f7</string>
  <string name="dot_button">.</string>
  <string name="e_button">e</string>
  <string name="exe_button">EXE</string>
  <string name="exp_button">EXP</string>
  <string name="floor_button">floor</string>
  <string name="left_button">\u2190</string>
  <string name="less_button">1st</string>
  <string name="ln_button">ln</string>
  <string name="log_button">log</string>
  <string name="minus_button">\u2212</string>
  <string name="more_button">2nd</string>
  <string name="ncr_button">nCr</string>
  <string name="npr_button">nPr</string>
  <string name="open_button">(</string>
  <string name="pi_button">\u03c0</string>
  <string name="pling_button">!</string>
  <string name="plus_button">+</string>
  <string name="pow_button">^</string>
  <string name="rand_button">rand</string>
  <string name="right_button">\u2192</string>
  <string name="sin_button">sin</string>
  <string name="sqrt_button">\u221a</string>
  <string name="tan_button">tan</string>
  <string name="times_button">\u00d7</string>
  <string name="x_button">x</string>

  <string name="menu_clear">Clear</string>
  <string name="menu_help">Help</string>
  <string name="menu_settings">Settings</string>

</resources>
